Bug 594796 - Make nsChildView::GetBounds() return true bounds (and not use mBounds). r=josh a=blocking-beta7+