widget/src/cocoa/nsChildView.mm
@@ -1032,7 +1032,12 @@ NS_IMETHODIMP nsChildView::SetCursor(imgIContainer* aCursor,
 // Get this component dimension
 NS_IMETHODIMP nsChildView::GetBounds(nsIntRect &aRect)
 {
-  aRect = mBounds;
+  if (!mView) {
+    aRect = mBounds;
+  } else {
+    NSRect frame = [mView frame];
+    NSRectToGeckoRect(frame, aRect);
+  }
   return NS_OK;
 }
 
